fixed flickering menu adjustment

--- a/wp-content/themes/DoughRoller_2016/assets/scss/modules/_navigation.scss
+++ b/wp-content/themes/DoughRoller_2016/assets/scss/modules/_navigation.scss
@@ -1,4 +1,4 @@
-/*Fix flickering menu */ .title-bar {display:none}
+/*Fix flickering menu */ .top-bar {display:none}
 
 
 /* Navigation breakpoints */
